.provarCaches/00D5h000009Q6XQEA0/objects/provar__Persona__c.object
<CustomObject>
    <fields>
        <fullName>provar__Behavior_Patterns__c</fullName>
        <label>Behavior Patterns</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Demographics__c</fullName>
        <inlineHelpText>Age, language, location, education, etc...</inlineHelpText>
        <label>Demographics</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Goals_and_Motivations__c</fullName>
        <label>Goals and Motivations</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Pain_Points_and_Frustrations__c</fullName>
        <label>Pain Points and Frustrations</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Technical_Expertise__c</fullName>
        <inlineHelpText>Technical skill levels for various technologies</inlineHelpText>
        <label>Technical Expertise</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Persona</label>
    <listViews>
        <fullName>provar__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Persona Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>